syntax = "proto2";
package echo;

option py_generic_services = true;


message EchoRequest {
    required string message = 1;

}
message EchoResponse {
    required string message = 1;

}

service EchoService {
    rpc Echo(EchoRequest) returns(EchoResponse);

}
